# AD2

./: .editorconfig  .gitignore  CLAUDE.md  README.md  build.gradle  build.gradle.kts  generated.txt  gradle.properties  input.txt  main_menu.json  output.txt  profiler.scenarios  settings.gradle  settings.gradle.kts  settings.json  task  task.txt  updates.json  version.properties
.claude/: settings.local.json
.githooks/: pre-commit  prepare-commit-msg
app/: build.gradle  build.gradle.kts  fabric.properties  key.jks  lint.xml  proguard-rules.pro
build-logic/: gradle.properties  settings.gradle.kts
build-logic-settings/: settings.gradle.kts
buildSrc/: build.gradle.kts
core/secret/src/main/cpp/: CMakeLists.txt  extractor.cpp
dependencies/: build.gradle.kts
docs/: Android Storage.md  Android.md  Annotations.md  Application Launch in Android.md  CMD.md  Clean Code.md  Compilation Kotlin or Java.md  Compose.md  Context.md  Coroutines.md  Errors in Android Studio.md  Fragments.md  Generics.md  Git.md  InputStream.md  Keyword `This`.md  Kotlin.md  ProGuard.md  References.md  SSL - TSL.md  VIM.md  context.mdb  include-modules-plugin.md  Версионирование.md  Запуск приложения.md  Рабочие встречи.md
feature_streams/: build.gradle  build.gradle.kts
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
gradle-profiler/: measure.txt  profiler.scenarios
instant/: build.gradle
macro-benchmark/: README.md  build.gradle.kts  run-baseline-profile.sh
micro-benchmark/: build.gradle.kts
parse/: build.gradle
parseInfo/: build.gradle  build.gradle.kts
(+6602 files in other folders)
